test/vm/errors/div_by_zero.ach
// Expected error: division by zero
1 / 0
